--- a/siddhi-hive-component/org.wso2.carbon.siddhihive.core/pom.xml
+++ b/siddhi-hive-component/org.wso2.carbon.siddhihive.core/pom.xml
@@ -24,9 +24,29 @@
         <artifactId>siddhi-query</artifactId>
         <version>2.1.0-wso2v1</version>
     </dependency>
-    </dependencies>
-  <build>
+
+    <dependency>
+        <groupId>org.wso2.carbon</groupId>
+        <artifactId>org.wso2.carbon.core</artifactId>
+        <version>4.2.0</version>
+        <scope>provided</scope>
+    </dependency>
+</dependencies>
+    <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-scr-plugin</artifactId>
+                <version>1.7.2</version>
+                <executions>
+                    <execution>
+                        <id>generate-scr-scrdescriptor</id>
+                        <goals>
+                            <goal>scr</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
