--- a/siddhi-hive-component/org.wso2.carbon.siddhihive.core/pom.xml
+++ b/siddhi-hive-component/org.wso2.carbon.siddhihive.core/pom.xml
@@ -56,6 +56,18 @@
                     <instructions>
                         <Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${pom.artifactId}</Bundle-Name>
+                        <Private-Package>
+                            org.wso2.carbon.siddhihive.core.internal
+                        </Private-Package>
+                        <Export-Package>
+                            !org.wso2.carbon.siddhihive.core.internal,
+                            org.org.wso2.carbon.siddhihive.core.*
+                        </Export-Package>
+                        <Import-Package>
+                            !javax.xml.namespace,
+                            javax.xml.namespace; version=0.0.0,
+                            *;resolution:=optional,
+                        </Import-Package>
                         <Export-Package>org.wso2.carbon.siddhihive.core.*</Export-Package>
                     </instructions>
                 </configuration>
