--- a/siddhi-hive-component/org.wso2.carbon.siddhihive.core/pom.xml
+++ b/siddhi-hive-component/org.wso2.carbon.siddhihive.core/pom.xml
@@ -31,6 +31,12 @@
         <version>4.2.0</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.3</version>
+    </dependency>
+
 
 </dependencies>
     <build>
