--- a/siddhi-hive-component/org.wso2.carbon.siddhihive.core/pom.xml
+++ b/siddhi-hive-component/org.wso2.carbon.siddhihive.core/pom.xml
@@ -36,6 +36,11 @@
         <artifactId>commons-lang</artifactId>
         <version>2.3</version>
     </dependency>
+    <dependency>
+        <groupId>org.wso2.carbon</groupId>
+        <artifactId>org.wso2.carbon.event.stream.manager.core</artifactId>
+        <version>1.0.1</version>
+    </dependency>
 
 
 </dependencies>
